# tp-advcpp

./: .gitignore  README.md
hw1/: CMakeLists.txt  README.md
hw1/examples/: CMakeLists.txt
hw1/examples/echo/: CMakeLists.txt
hw1/examples/echo/src/: echo.cpp  main.cpp
hw1/process/: CMakeLists.txt
hw1/process/include/process/: Exception.hpp  Process.hpp  Process.inl
hw1/process/src/: Process.cpp
hw2/: CMakeLists.txt  README.md
hw2/examples/: CMakeLists.txt
hw2/examples/logging/: CMakeLists.txt  logging.cpp
hw2/examples/threaded_log/: CMakeLists.txt  threaded_log.cpp
hw2/log/: CMakeLists.txt
hw2/log/include/log/: BaseLogger.hpp  Exception.hpp  FileLogger.hpp  Level.hpp  Logger.hpp  Properties.hpp  StderrLogger.hpp  StdoutLogger.hpp  ThreadedLogger.hpp
hw2/log/include/log/format/: BaseFormatter.hpp  LogFormatter.hpp
hw2/log/include/log/loggers/: BaseLogger.hpp  FileLogger.hpp  StderrLogger.hpp  StdoutLogger.hpp
hw2/log/include/log/utils/: SafeQueue.hpp
hw2/log/src/: BaseLogger.cpp  FileLogger.cpp  LogFormatter.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp  ThreadedLogger.cpp
hw2/log/src/format/: LogFormatter.cpp
hw2/log/src/loggers/: BaseLogger.cpp  FileLogger.cpp  StderrLogger.cpp  StdoutLogger.cpp
hw3/: CMakeLists.txt  README.md
hw3/examples/: CMakeLists.txt
hw3/examples/echo/: CMakeLists.txt
hw3/examples/echo/src/: client.cpp  server.cpp
hw3/tcp/: CMakeLists.txt
hw3/tcp/include/tcp/: Connection.hpp  Exception.hpp  Server.hpp
hw3/tcp/src/: Connection.cpp  Exception.cpp  Server.cpp
hw4/: CMakeLists.txt  README.md
hw4/epoll_server/: CMakeLists.txt
hw4/epoll_server/include/epoll_server/: Connection.hpp  Exception.hpp  Server.hpp
hw4/epoll_server/include/epoll_server/utils/: FileDescriptor.hpp
hw4/epoll_server/src/: Connection.cpp  Exception.cpp  Server.cpp
hw4/epoll_server/src/utils/: FileDescriptor.cpp
hw4/examples/echo/: CMakeLists.txt  server.cpp
hw4/examples/echo/src/: client.cpp  server.cpp
hw5/: CMakeLists.txt  README.md
hw5/examples/: CMakeLists.txt
hw5/examples/simple/: CMakeLists.txt  main.cpp
hw5/shmem/: CMakeLists.txt
hw5/shmem/include/shmem/: Exception.hpp  SharedMemory.hpp  Type.hpp
hw5/shmem/include/shmem/allocator/: LinearAllocator.hpp
hw5/shmem/include/shmem/container/: Map.hpp
hw5/shmem/include/shmem/utils/bridge/: NonCopyable.hpp
hw5/shmem/include/shmem/utils/sync/: Semaphore.hpp
hw6/: CMakeLists.txt  README.md
hw6/examples/: CMakeLists.txt
hw6/examples/server/: CMakeLists.txt  main.cpp  my_server.hpp
hw6/examples/server/my_server/: my_server.cpp  my_server.hpp
hw6/examples/server/utils/: parser.cpp  parser.hpp
hw6/http/: CMakeLists.txt
hw6/http/include/http/: errors.hpp  signal.hpp
hw6/http/include/http/network/protocol/: http.hpp  http_request.hpp  http_response.hpp
hw6/http/include/http/server/: client_handler.hpp  server.hpp  server_worker.hpp
hw6/http/include/http/utils/: coroutine.hpp  file_descriptor.hpp
hw6/http/src/: signal.cpp
hw6/http/src/network/: connection.cpp
hw6/http/src/network/protocol/: http.cpp  http_request.cpp  http_response.cpp
hw6/http/src/server/: client_handler.cpp  server.cpp  server_worker.cpp
hw6/http/src/utils/: coroutine.cpp  file_descriptor.cpp
hw6/log/: CMakeLists.txt
hw6/log/include/log/format/: LogFormatter.hpp
hw6/log/include/log/loggers/: BaseLogger.hpp
hw6/log/src/: Exception.cpp
hw6/log/src/format/: BaseFormatter.cpp
hw6/log/src/loggers/: StderrLogger.cpp
hw7/: CMakeLists.txt  README.md
hw7/data_bank/: CMakeLists.txt
hw7/data_bank/include/data_bank/: errors.hpp
hw7/data_bank/include/data_bank/external_sort/: cache_file.hpp  data_file.hpp  partition.hpp
hw7/data_bank/include/data_bank/utils/: file.hpp  file_descriptor.hpp  mem_mapped_file.hpp  temp_file.hpp
hw7/data_bank/src/: errors.cpp
hw7/data_bank/src/external_sort/: cache_file.cpp  partition.cpp
hw7/data_bank/src/utils/: file.cpp  file_descriptor.cpp  mem_mapped_file.cpp  temp_file.cpp
hw7/examples/: CMakeLists.txt
hw7/examples/big_file/: CMakeLists.txt  main.cpp
hw7/examples/big_file/include/: db_server.hpp  file_generator.hpp  rng.hpp
hw7/examples/big_file/src/: db_server.cpp
hw7/http/include/http/network/: connection.hpp
hw7/http/src/: errors.cpp  signal.cpp
hw7/http/src/network/: connection.cpp
hw7/http/src/network/protocol/: http_response.cpp
hw7/http/src/server/: server.cpp
